# f16-flight-dynamics

./: CMakeLists.txt  Dockerfile  README.md  meta.yaml  pyproject.toml  setup.py
.github/workflows/: cmake.yml
cmake/: f16Config.cmake.in
notebooks/: CSAF_Integration.ipynb
python-bindings/: CMakeLists.txt  ComponentWrapper.h  F16PlantWrapper.h  LowLevelControllerWrapper.h  PyBinding.cpp  PyTypeConvert.h
python-bindings/f16dynamics/: __init__.py  csaf.py
python-bindings/src/: F16PlantWrapper.cpp  LowLevelControllerWrapper.cpp  PyTypeConvert.cpp
src/: CMakeLists.txt
src/f16_flight_dynamics/Component/: Component.h
src/f16_flight_dynamics/Component/src/: Component.cpp
src/f16_flight_dynamics/F16Model/: AircraftTypes.h  F16Plant.h  F16Types.h  LowLevelController.h  LowLevelFunctions.h
src/f16_flight_dynamics/F16Model/src/: F16Plant.cpp  LowLevelController.cpp  LowLevelFunctions.cpp
tests/: CMakeLists.txt
tests/core/: F16PlantTests.cpp
tests/integration/: test_f16plant.py
